--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
   padding:0;
   font-family:Arial, Helvetica, sans-serif;
   line-height:6mm;
+  margin: 20px;
+  border-style:ridge;
+  border-color:black;
+  border-width:5px;
+  
 }
 
 .content-wrap{
